Added Contact page, css, and more content to each page

--- a/AlmostEmpty3-1StarterCode/Views/Home/About.cshtml
+++ b/AlmostEmpty3-1StarterCode/Views/Home/About.cshtml
@@ -1,2 +1,8 @@
-﻿
-<p>Here is some info about this site...</p>
+﻿<h1>About</h1>
+
+<p>I was told to put content on this page so I'm just writing things down here. 
+   I originally thought to make this a page about a character in one of the games I play, 
+    but I figure this would be enough content snice I dont know what exactly to write about.</p>
+
+<h3>Here is a kitty!</h3>
+<h1>=^.^=</h1>
