--- a/AlmostEmpty3-1StarterCode/Views/Home/Index.cshtml
+++ b/AlmostEmpty3-1StarterCode/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿<h1>Home</h1>
+
+<h2>Hello!</h2>
+
 <p>
-    This is the index page.
+    This website will teach you all about me! 
+    Except it wont because I didn't put anything substantial on here. 
+    Just putting some content on here so it looks a bit more filled out since it's practice.
 </p>
